@@ -1,0 +1,269 @@
+/**
+ * Copyright (c) 2015-2017, Henry Yang 杨勇 (gismail@foxmail.com).
+ * <p>
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ * <p>
+ * http://www.apache.org/licenses/LICENSE-2.0
+ * <p>
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
+package com.lambkit.common.util;
+
+import java.io.ByteArrayInputStream;
+import java.io.ByteArrayOutputStream;
+import java.io.IOException;
+import java.io.InputStream;
+import java.io.OutputStream;
+import java.io.UnsupportedEncodingException;
+import java.security.*;
+import javax.crypto.*;
+import javax.crypto.spec.*;
+import javax.mail.internet.MimeUtility;
+
+import sun.misc.BASE64Decoder;
+import sun.misc.BASE64Encoder;
+
+public class SecurityUtils {
+	private final static int ITERATIONS = 1000;
+
+	public static String encrypt(String key, String plainText) throws Exception {
+		try {
+			byte[] salt = new byte[8];
+			MessageDigest md = MessageDigest.getInstance("MD5");
+			md.update(key.getBytes());
+			byte[] digest = md.digest();
+			for (int i = 0; i < 8; i++) {
+				salt[i] = digest[i];
+			}
+			PBEKeySpec pbeKeySpec = new PBEKeySpec(key.toCharArray());
+			SecretKeyFactory keyFactory = SecretKeyFactory.getInstance("PBEWithMD5AndDES");
+			SecretKey skey = keyFactory.generateSecret(pbeKeySpec);
+			PBEParameterSpec paramSpec = new PBEParameterSpec(salt, ITERATIONS);
+			Cipher cipher = Cipher.getInstance("PBEWithMD5AndDES");
+			cipher.init(Cipher.ENCRYPT_MODE, skey, paramSpec);
+			byte[] cipherText = cipher.doFinal(plainText.getBytes());
+			String saltString = new String(encode(salt));
+			String ciphertextString = new String(encode(cipherText));
+			return saltString.substring(0, 6) + ciphertextString.substring(0, 12) + saltString.substring(6, 12);
+		} catch (Exception e) {
+			throw new Exception("Encrypt Text Error:" + e.getMessage(), e);
+		}
+	}
+
+	public static String decrypt(String key, String encryptTxt) throws Exception {
+		//int saltLength = 12;
+		try {
+			String salt = encryptTxt.substring(0, 6) + encryptTxt.substring(18, encryptTxt.length());
+			String ciphertext = encryptTxt.substring(6, 18);
+			byte[] saltarray = decode(salt.getBytes());
+			byte[] ciphertextArray = decode(ciphertext.getBytes());
+			PBEKeySpec keySpec = new PBEKeySpec(key.toCharArray());
+			SecretKeyFactory keyFactory = SecretKeyFactory.getInstance("PBEWithMD5AndDES");
+			SecretKey skey = keyFactory.generateSecret(keySpec);
+			PBEParameterSpec paramSpec = new PBEParameterSpec(saltarray, ITERATIONS);
+			Cipher cipher = Cipher.getInstance("PBEWithMD5AndDES");
+			cipher.init(Cipher.DECRYPT_MODE, skey, paramSpec);
+			byte[] plaintextArray = cipher.doFinal(ciphertextArray);
+			return new String(plaintextArray);
+		} catch (Exception e) {
+			throw new Exception(e);
+		}
+	}
+	
+	/**
+	 * base64 encode
+	 * @param b
+	 * @return
+	 * @throws Exception
+	 */
+	public static byte[] encode(byte[] b) throws Exception {
+		ByteArrayOutputStream baos = null;
+		OutputStream b64os = null;
+		try {
+			baos = new ByteArrayOutputStream();
+			b64os = MimeUtility.encode(baos, "base64");
+			b64os.write(b);
+			b64os.close();
+			return baos.toByteArray();
+		} catch (Exception e) {
+			throw new Exception(e);
+		} finally {
+			try {
+				if (baos != null) {
+					baos.close();
+					baos = null;
+				}
+			} catch (Exception e) {
+			}
+			try {
+				if (b64os != null) {
+					b64os.close();
+					b64os = null;
+				}
+			} catch (Exception e) {
+			}
+		}
+	}
+
+	/**
+	 * base64 decode
+	 * @param b
+	 * @return
+	 * @throws Exception
+	 */
+	public static byte[] decode(byte[] b) throws Exception {
+		ByteArrayInputStream bais = null;
+		InputStream b64is = null;
+		try {
+			bais = new ByteArrayInputStream(b);
+			b64is = MimeUtility.decode(bais, "base64");
+			byte[] tmp = new byte[b.length];
+			int n = b64is.read(tmp);
+			byte[] res = new byte[n];
+			System.arraycopy(tmp, 0, res, 0, n);
+			return res;
+		} catch (Exception e) {
+			throw new Exception(e);
+		} finally {
+			try {
+				if (bais != null) {
+					bais.close();
+					bais = null;
+				}
+			} catch (Exception e) {
+			}
+			try {
+				if (b64is != null) {
+					b64is.close();
+					b64is = null;
+				}
+			} catch (Exception e) {
+			}
+		}
+	}
+	
+	
+	/**
+     * 加密
+     * 1.构造密钥生成器
+     * 2.根据ecnodeRules规则初始化密钥生成器
+     * 3.产生密钥
+     * 4.创建和初始化密码器
+     * 5.内容加密
+     * 6.返回字符串
+     */
+    public static String aesEncode(String content, String encodeRules) {
+        try {
+            //1.构造密钥生成器，指定为AES算法,不区分大小写
+            KeyGenerator keyGenerator = KeyGenerator.getInstance("AES");
+            //2.根据ecnodeRules规则初始化密钥生成器
+            //生成一个128位的随机源,根据传入的字节数组
+            SecureRandom random = SecureRandom.getInstance("SHA1PRNG");
+            random.setSeed(encodeRules.getBytes());
+            keyGenerator.init(128, random);
+            //3.产生原始对称密钥
+            SecretKey originalKey = keyGenerator.generateKey();
+            //4.获得原始对称密钥的字节数组
+            byte[] raw = originalKey.getEncoded();
+            //5.根据字节数组生成AES密钥
+            SecretKey key = new SecretKeySpec(raw, "AES");
+            //6.根据指定算法AES自成密码器
+            Cipher cipher = Cipher.getInstance("AES");
+            //7.初始化密码器，第一个参数为加密(Encrypt_mode)或者解密解密(Decrypt_mode)操作，第二个参数为使用的KEY
+            cipher.init(Cipher.ENCRYPT_MODE, key);
+            //8.获取加密内容的字节数组(这里要设置为utf-8)不然内容中如果有中文和英文混合中文就会解密为乱码
+            byte[] byteEncode = content.getBytes("utf-8");
+            //9.根据密码器的初始化方式--加密：将数据加密
+            byte[] byteAES = cipher.doFinal(byteEncode);
+            //10.将加密后的数据转换为字符串
+            //这里用Base64Encoder中会找不到包
+            //解决办法：
+            //在项目的Build path中先移除JRE System Library，再添加库JRE System Library，重新编译后就一切正常了。
+            String aesEncode = new String(new BASE64Encoder().encode(byteAES));
+            //11.将字符串返回
+            return aesEncode;
+        } catch (NoSuchAlgorithmException e) {
+            e.printStackTrace();
+        } catch (NoSuchPaddingException e) {
+            e.printStackTrace();
+        } catch (InvalidKeyException e) {
+            e.printStackTrace();
+        } catch (IllegalBlockSizeException e) {
+            e.printStackTrace();
+        } catch (BadPaddingException e) {
+            e.printStackTrace();
+        } catch (UnsupportedEncodingException e) {
+            e.printStackTrace();
+        }
+        //如果有错就返加nulll
+        return null;
+    }
+
+    /**
+     * 解密
+     * 解密过程：
+     * 1.同加密1-4步
+     * 2.将加密后的字符串反纺成byte[]数组
+     * 3.将加密内容解密
+     */
+    public static String aesDecode(String content, String encodeRules) {
+        try {
+            //1.构造密钥生成器，指定为AES算法,不区分大小写
+            KeyGenerator keygen = KeyGenerator.getInstance("AES");
+            //2.根据ecnodeRules规则初始化密钥生成器
+            //生成一个128位的随机源,根据传入的字节数组
+            SecureRandom random = SecureRandom.getInstance("SHA1PRNG");
+            random.setSeed(encodeRules.getBytes());
+            keygen.init(128, random);
+            //3.产生原始对称密钥
+            SecretKey originalKey = keygen.generateKey();
+            //4.获得原始对称密钥的字节数组
+            byte[] raw = originalKey.getEncoded();
+            //5.根据字节数组生成AES密钥
+            SecretKey key = new SecretKeySpec(raw, "AES");
+            //6.根据指定算法AES自成密码器
+            Cipher cipher = Cipher.getInstance("AES");
+            //7.初始化密码器，第一个参数为加密(Encrypt_mode)或者解密(Decrypt_mode)操作，第二个参数为使用的KEY
+            cipher.init(Cipher.DECRYPT_MODE, key);
+            //8.将加密并编码后的内容解码成字节数组
+            byte[] byteContent = new BASE64Decoder().decodeBuffer(content);
+            /*
+             * 解密
+             */
+            byte[] byteDecode = cipher.doFinal(byteContent);
+            String aesDecode = new String(byteDecode, "utf-8");
+            return aesDecode;
+        } catch (NoSuchAlgorithmException e) {
+            e.printStackTrace();
+        } catch (NoSuchPaddingException e) {
+            e.printStackTrace();
+        } catch (InvalidKeyException e) {
+            e.printStackTrace();
+        } catch (IOException e) {
+            e.printStackTrace();
+        } catch (IllegalBlockSizeException e) {
+            throw new RuntimeException("兄弟，配置文件中的密码需要使用AES加密，请使用com.lambkit.common.util.SecurityUtils工具类修改这些值！");
+            //e.printStackTrace();
+        } catch (BadPaddingException e) {
+            e.printStackTrace();
+        }
+        //如果有错就返加nulll
+        return null;
+    }
+    
+    public static String encodePassword(String password, String salt) {
+    	String encodeRules = "Lambkit@" + EncryptUtils.md5(salt);
+    	return aesEncode(password, encodeRules);
+    }
+    
+    public static String decodePassword(String password, String salt) {
+    	String encodeRules = "Lambkit@" + EncryptUtils.md5(salt);
+    	return aesDecode(password, encodeRules);
+    }
+}
