@@ -2,6 +2,8 @@
 -----------------------------
 lambkit-1.0.2:
 新增：新增undertow-websocket支持，默认加入DefaultWebSocketServer，地址/websocket
+新增：SecurityUtils新增AES加密解密
+新增：数据库密码加密
 优化：增强LambkitCache能力，增加list、set方式的缓存
 优化：更改Upms缓存方式，可选择LambkitCache和Redis两种方式
 优化：优化CommonUtils工具
@@ -35,7 +37,7 @@ lambkit-0.3.1：
 优化：优化GetawayRender支持当前系统其他地址的代理
 修复：修复mgrdb、meta和upms配置交叉问题
 修复：修复代码生成器sysconfig、meta同时运行的冲突问题
-修复: 修复redirect错误
+修复：修复redirect错误
 
 -----------------------------
 lambkit-0.2.3：
